---------------------------------------------------------------------------------------------------
Version: 2.1.16
Date: 2024-12-03
  Minor Features:
    - Added command to remove an offline player's spawns and character (oarc-cleanup-player).
  Changes:
    - Lots of minor changes to the various messages that get printed. Added color and icons where appropriate, and changed some of the sound effects used.
  Modding:
    - Add oarc-mod-on-config-changed and oarc-mod-on-chunk-generated-near-spawn events.
    - Update template scenario to show how to use the new events to modify the spawn area and spawn options GUI.
---------------------------------------------------------------------------------------------------
Version: 2.1.15
Date: 2024-11-27
  Bugfixes:
    - Fix crash when player spawns due to missing surface configuration due to a missing migration.
  Changes:
    - Images losslessly compressed to reduce mod size. (Thanks plexpt!)
  Modding:
    - Adding first_spawn and is_host flags to oarc-mod-on-player-spawned event.
    - Add additional remote interfaces: get_unique_spawns, get_player_home_spawn, get_player_primary_spawn.
    - Adding new custom event: oarc-mod-on-spawn-choices-gui-displayed. Intended to let other modders customize the spawn choices GUI.
---------------------------------------------------------------------------------------------------
Version: 2.1.14
Date: 2024-11-21
  Info:
    - Update CN locale. (Thanks plexpt!)
    - Many non-localized planet names localized and started using the icons where possible too.
    - Make use of new set_driving() function. Won't affect gameplay, but I no longer have to do an extra teleport as a workaround.
    - Add mod compatibility for "Better Chatting" mod. (Thanks PennyJim!)
---------------------------------------------------------------------------------------------------
Version: 2.1.13
Date: 2024-11-20
  Major Features: